kubernetes/apps/default/paperless-gpt/app/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: paperless-gpt
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: paperless-gpt
      app.kubernetes.io/instance: paperless-gpt
      app.kubernetes.io/controller: paperless-gpt
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: networking
          matchExpressions:
            - key: gateway.networking.k8s.io/gateway-name
              operator: In
              values:
                - envoy-external
                - envoy-internal
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
